KNOWAGE-932 JIRA ISSUE: - The Plus button is now visible always when the Datasets' active (selected) tab is 'My Data Set' and when the Models' is 'Business Models'.
KNOWAGE-930 JIRA ISSUE:
- STEP 1: Three comboboxes and three numeric fields (inputs) are added to this step. 'Limit preview' check box is controlling the visibility of these two groups, just as a mock. This will be change, so they will be visible according to the type of the uploaded file.

--- a/knowage/web-content/themes/commons/css/SASS/components/_workspace.scss
+++ b/knowage/web-content/themes/commons/css/SASS/components/_workspace.scss
@@ -118,4 +118,18 @@
 		top: 0px !important;
 		right: -15px !important;
 	}
+		
+	// @author Danilo Ristovski (danristo, danilo.ristovski@mht.net)	
+	.datasetWizardCardHeight {
+		height: 70%;
+		min-height: 70%;
+	}
+	
+	// @author Danilo Ristovski (danristo, danilo.ristovski@mht.net)	
+	@-moz-document url-prefix() { 
+		.datasetWizardCardHeight {
+			height: 90%;
+			min-height: 90%;
+		}
+	}
 }
